about page fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,7 +500,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #1bbd36;
+  background: purple;
   min-height: 40px;
   margin-top: 72px;
 }
