--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1892,3 +1892,20 @@ section {
   color: #fff;
   text-decoration: none;
 }
+
+
+/* join form */
+.iframe-form{
+  width: 600px; 
+  height: 600px; 
+  z-index: 1;
+}
+
+@media (max-width: 667px)
+{
+    .iframe-form{
+        width: 100%;
+        height: 600px;
+        z-index: 1;
+    }
+}
