--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1764,6 +1764,12 @@ section {
   font-size: 14px;
   background: #111;
 }
+@media (max-width: 667px)
+{
+    #footer{
+        text-align: center;
+    }
+}
 #footer .footer-top {
   padding: 60px 0 30px 0;
   background: #1e1e1e;
