--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,24 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 
+@media (max-width: 768px) {
+  #header .logo{
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 400px) {
+  #header .logo{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 365px) {
+  #header .logo{
+    font-size: 14px;
+  }
+}
+
 /*--------------------------------------------------------------
 # Header Social Links
 --------------------------------------------------------------*/
