--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -847,6 +847,10 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+.main{
+  margin: 0px 30px 0px 30px;  
+}
+
 .about-us .content h2 {
   font-weight: 700;
   font-size: 42px;
