--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #header .logo a {
-  color: #111;
+  color: #000;
 }
 #header .logo a span {
   color: #411472;
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto", sans-serif;
   font-size: 13px;
   font-weight: 600;
-  color: #111;
+  color: #000;
   white-space: nowrap;
   text-transform: uppercase;
   transition: 0.3s;
@@ -202,7 +202,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #111;
+  color: #000;
 }
 .navbar .dropdown ul a i {
   font-size: 12px;
@@ -247,9 +247,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
 }
 .navbar-toggler{
-  color: #411472;
-  
-  
+  color: #411472; 
 }
 .mobile-nav-toggle.bi-x {
   color: #411472;
@@ -285,8 +283,6 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 55px;
   right: 15px;
-  bottom: 15px;
-  left: 15px;
   padding: 10px 0;
   background-color: rgb(226, 219, 219);
   overflow-y: auto;
@@ -295,7 +291,7 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a, .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #111;
+  color: #000;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
   color: #411472;
@@ -425,7 +421,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(255, 255, 255, 0.4);
   border-radius: 50px;
   transition: 0.3s;
-  color: rgba(255, 255, 255, 0.6);
+  color: #FFF;
   width: 54px;
   height: 54px;
   display: flex;
@@ -433,7 +429,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 #hero .carousel-control-next-icon:hover, #hero .carousel-control-prev-icon:hover {
-  background: rgba(255, 255, 255, 0.6);
+  background: #FFF;
   color: rgba(255, 255, 255, 0.8);
 }
 #hero .carousel-indicators li {
@@ -620,7 +616,7 @@ section {
   font-size: 22px;
 }
 .services .icon-box h4 a {
-  color: #111;
+  color: #000;
   transition: ease-in-out 0.3s;
 }
 .services .icon-box p {
@@ -733,10 +729,10 @@ section {
   font-size: 18px;
   color: #fff;
   font-weight: 600;
-  color: #111;
+  color: #000;
 }
 .portfolio .portfolio-item .portfolio-info p {
-  color: #444444;
+  color: #000;
   font-size: 14px;
   margin-bottom: 0;
 }
@@ -963,7 +959,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 18px;
-  color: #111;
+  color: #000;
 }
 .team .member .member-info span {
   display: block;
@@ -997,7 +993,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #111;
+  color: #000;
 }
 .skills .progress .skill .val {
   float: right;
@@ -1037,7 +1033,7 @@ section {
   font-size: 16px;
 }
 .features .icon-box h3 a {
-  color: #111;
+  color: #000;
   transition: ease-in-out 0.3s;
 }
 .features .icon-box h3 a:hover {
@@ -1234,7 +1230,7 @@ section {
   font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 0;
-  color: #111;
+  color: #000;
 }
 .testimonials .testimonial-item h4 {
   font-size: 14px;
@@ -1290,13 +1286,13 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #111;
+  color: #000;
 }
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #444444;
+  color: #000;
 }
 .contact .info:hover i {
   background: #411472;
@@ -1414,7 +1410,7 @@ section {
   margin: 0 0 10px 0;
 }
 .blog .entry .entry-title a {
-  color: #111;
+  color: #000;
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
@@ -1493,7 +1489,7 @@ section {
   top: 0;
   bottom: 0;
   width: 3px;
-  background-color: #111;
+  background-color: #000;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1506,7 +1502,7 @@ section {
   display: inline;
 }
 .blog .entry .entry-footer a {
-  color: #1e1e1e;
+  color: #000;
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
@@ -1558,7 +1554,7 @@ section {
   font-size: 22px;
   margin-bottom: 0px;
   padding: 0;
-  color: #111;
+  color: #000;
 }
 .blog .blog-author .social-links {
   margin: 0 10px 10px 0;
@@ -1601,7 +1597,7 @@ section {
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
-  color: #111;
+  color: #000;
 }
 .blog .blog-comments .comment h5 .reply i {
   font-size: 20px;
@@ -1652,13 +1648,13 @@ section {
   border-radius: 4px;
   padding: 10px 20px;
   border: 0;
-  background-color: #111;
+  background-color: #000;
 }
 .blog .blog-comments .reply-form .btn-primary:hover {
-  background-color: #1e1e1e;
+  background-color: #000;
 }
 .blog .blog-pagination {
-  color: #444444;
+  color: #000;
 }
 .blog .blog-pagination ul {
   display: flex;
@@ -1671,7 +1667,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-pagination li a {
-  color: #111;
+  color: #000;
   padding: 7px 16px;
   display: flex;
   align-items: center;
@@ -1699,7 +1695,7 @@ section {
   font-weight: 700;
   padding: 0 0 0 0;
   margin: 0 0 15px 0;
-  color: #111;
+  color: #000;
   position: relative;
 }
 .blog .sidebar .sidebar-item {
@@ -1747,7 +1743,7 @@ section {
   padding-top: 10px;
 }
 .blog .sidebar .categories ul a {
-  color: #111;
+  color: #000;
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
@@ -1771,7 +1767,7 @@ section {
   font-weight: bold;
 }
 .blog .sidebar .recent-posts h4 a {
-  color: #111;
+  color: #000;
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
@@ -1820,7 +1816,7 @@ section {
 #footer {
   color: #fff;
   font-size: 14px;
-  background: #111;
+  background: #000;
 }
 @media (max-width: 667px)
 {
@@ -1830,7 +1826,7 @@ section {
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #1e1e1e;
+  background: #000;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1850,7 +1846,7 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Roboto", sans-serif;
-  color: rgba(255, 255, 255, 0.7);
+  color: #FFF;
 }
 #footer .footer-top h4 {
   font-size: 16px;
@@ -1882,18 +1878,18 @@ section {
   padding-top: 0;
 }
 #footer .footer-top .footer-links ul a {
-  color: rgba(255, 255, 255, 0.6);
+  color: #FFF;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 #footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #fff;
+  font-weight: 800;
+  color: purple;
 }
 #footer .footer-newsletter {
   font-size: 15px;
-  color: rgba(255, 255, 255, 0.7);
+  color: #FFF;
 }
 #footer .footer-newsletter h4 {
   font-size: 16px;
@@ -1946,19 +1942,31 @@ section {
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
-  border-radius: 4px;
+  border-radius: 10px;
   text-align: center;
   width: 36px;
   height: 36px;
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #411472;
+  background: purple;
   color: #fff;
   text-decoration: none;
 }
 
+@media only screen and (min-width: 991px) {
+  .footer-top{
+    background-color: #000 !important;
+    margin: 0 125px 0 125px !important;
+  }
+}
 
+@media only screen and (min-width: 1200px) {
+  .footer-top{
+    background-color: #000 !important;
+    margin: 0 200px 0 200px !important;
+  }
+}
 /* join form */
 .iframe-form{
   width: 700px; 
@@ -2065,74 +2073,13 @@ section {
   text-decoration: none;
 }
 
-@media (max-width: 500px){
-.internship_img{
-  display: none;
-  }
-  .internship_btn{
-    text-align: center;
-  }
+.payment-url{
+  font-weight: 800;
+  color: purple;
+  text-transform: uppercase;
 }
 
-.internship_btn {
-    font-family: "Roboto", sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 12px 32px;
-    border-radius: 4px;
-    transition: 0.5s;
-    line-height: 1;
-    margin: 10px;
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
-    border: 2px solid #411472;
-    background: #411472;
-  }
-  .internship_btn a{
-    color: white;
-  }
-
-  .internship_btn:hover {
-    text-decoration: none;
-    background: white;
-  }
-  .internship_btn a:hover{
-    color: #411472;
-  }
-
-  @media (max-width: 500px){
-      .internship_btn2{
-        text-align: center;
-      }
-    }
-    
-    .internship_btn2 {
-        font-family: "Roboto", sans-serif;
-        font-weight: 600;
-        font-size: 16px;
-        letter-spacing: 1px;
-        display: inline-block;
-        padding: 12px 32px;
-        border-radius: 4px;
-        transition: 0.5s;
-        line-height: 1;
-        margin: 10px;
-        -webkit-animation-delay: 0.8s;
-        animation-delay: 0.8s;
-        border: 2px solid #411472;
-        background: #411472;
-        color: white;
-      }
-      .internship_btn2 a{
-        color: white;
-      }
-    
-      .internship_btn2:hover {
-        text-decoration: none;
-        background: white;
-      }
-      .internship_btn2 a:hover{
-        color: #411472;
-      }
+.support-card{
+  padding: 0 0 0 60px !important;
+  text-align: left;
+}
