--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,12 @@ h1, h2, h3, h4, h5, h6 {
   .navbar ul {
     display: none;
   }
+
+  .about-padding{
+    margin-top: -60px;
+  }
 }
+
 .navbar-mobile {
   position: fixed;
   overflow: hidden;
